# bgswitch

./: .gitignore  CMakeLists.txt  Jamfile  ReadMe.md
.github/workflows/: build.yml
CMakeModules/: CopySettings.cmake.in
Scripts/: simple_rotate.sh  wallrus.launch  wallrus.rb
Source/: BackgroundManager.cpp  BackgroundManager.h  CMakeLists.txt  Wallrus.rdef  WallrusApp.cpp  WallrusApp.h  WallrusAppImpl.h  WallrusAppScripting.cpp  argparse.hpp  bgswitch.cpp  bgswitch.rdef  wallrus.launch.in  wallrus.toml
UserGuide/: CMakeLists.txt  conf.py  index.rst
